# ChemistKit

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  imgui.ini  waterbox-1195.xyz
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/chemistkit/: chemistkit.hpp
include/chemistkit/glad/: glad.h
source/: lib.cpp
src/: MyApplication.cpp  main.cpp
src/chemistkit/: MyApplication.cpp  glad.c  printsomething.cpp
src/chemistkit/shaders/: fragment.frag  vertex.vert
test/: CMakeLists.txt
test/source/: ChemisKit_test.cpp
